cfn_benchmark/cfn_templates/ryankarlos__AWS-VPC/templates/redshift.yaml
Description: "This template creates a child stack with redshift resource with enhanced VPC routing in a custom vpc"
Parameters:
  Username:
    Description: "Redshift Master username"
    Type: "String"
    NoEcho: true
  Password:
    Description: "Redshift Master password"
    Type: "String"
    NoEcho: true
  Subnet1:
    Default: subnet-0559a76c20973f935
    Description: "Default VPC Public Subnet 1 ind for redshift subnet group"
    Type: "String"
  Subnet2:
    Default: subnet-0bca7c8227c55bf1f
    Description: "Default VPC Public subnet 2 for redshift subnet group"
    Type: "String"
  Subnet3:
    Default: subnet-0ec7aae8fc47315b5
    Description: "Default VPC Public subnet 3 for redshift subnet group"
    Type: "String"
  EnhancedRouting:
    Default: true
    Description: "n option that specifies whether to create the cluster with enhanced VPC routing enabled."
    Type: "String"
    AllowedValues:
        - true
        - false
  NodeType:
    Description: "Type of node in redshift cluster. Only allow nodes whose pricing < $1/hr in US-east region"
    Default: dc2.large
    AllowedValues:
      - ds2.xlarge
      - dc1.large
      - dc2.large
    Type: "String"
  DBName:
    Description: "Name of redshift db"
    Default: dev
    Type: "String"
  EC2Security:
    Description: The id of EC2 security group for allowing acess to RDS
    Type: String
    AllowedPattern: 'sg-[a-zA-Z0-9]*'
    ConstraintDescription: must begin with sg- and contain alphanumeric characters
  ClientIP:
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: "It must be a valid IP CIDR range of the form x.x.x.x/x. Suggest to enable access to your IP address only. Pls get your address using checkip.amazonaws.com or whatsmyip.org."
    Description: "The IP address range that can be used to connect to the RDS instances from your local machine.It must be a valid IP CIDR range of the form x.x.x.x/x.Pls get your address using checkip.amazonaws.com or whatsmyip.org"
    Type: "String"
Resources:
  RedshiftCluster:
    Type: "AWS::Redshift::Cluster"
    Properties:
      IamRoles:
        - !GetAtt RSDefaultIAMRole.Arn
      DBName:
        Ref: "DBName"
      MasterUsername:
        Ref: "Username"
      MasterUserPassword:
        Ref: "Password"
      NodeType:
        Ref: "NodeType"
      ClusterType: "single-node"
      ClusterIdentifier: "default-cluster"
      Port: "5439"
      ClusterParameterGroupName:
        Ref: "RedshiftClusterParameterGroup"
      ClusterSubnetGroupName:
        Ref: "RedshiftSubnetGroup"
      EnhancedVpcRouting:
          Ref: "EnhancedRouting"
      PubliclyAccessible: false
      VpcSecurityGroupIds: [!Ref RSDefaultSecurity]
  RedshiftClusterParameterGroup:
      Properties:
          Description: "Cluster parameter group"
          ParameterGroupFamily: "redshift-1.0"
          Parameters:
              - { ParameterName: "enable_user_activity_logging", ParameterValue: "true" }
      Type: "AWS::Redshift::ClusterParameterGroup"
  RedshiftSubnetGroup:
      Type: "AWS::Redshift::ClusterSubnetGroup"
      Properties:
          Description: "Default VPC Public Subnet Group available for the default Redshift Cluster"
          SubnetIds: [!Ref Subnet1, !Ref Subnet2, !Ref Subnet3]
  RSDefaultSecurity:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: "Redshift in default vpc"
            VpcId: "vpc-09eeb45f883f8307c"
            SecurityGroupIngress:
                -   IpProtocol: tcp
                    FromPort: 5439
                    ToPort:  5439
                    SourceSecurityGroupId: !Ref EC2Security
                -   IpProtocol: tcp
                    FromPort: 5439
                    ToPort: 5439
                    SourceSecurityGroupId: "sg-0afdf2d5ce4c8ed3e"
                -   IpProtocol: tcp
                    FromPort: 5439
                    ToPort: 5439
                    CidrIp: !Ref ClientIP
            SecurityGroupEgress:
                -   CidrIp: "0.0.0.0/0"
                    IpProtocol: "-1"
            Tags:
                -   Key: Name
                    Value: Redshift
  RSDefaultIAMRole:
        Type: AWS::IAM::Role
        Properties:
            AssumeRolePolicyDocument:
                Version: '2008-10-17'
                Statement:
                    -   Sid: ''
                        Effect: Allow
                        Principal:
                            Service: redshift.amazonaws.com
                        Action: sts:AssumeRole
            RoleName: DefaultRedshiftRole
            ManagedPolicyArns:
                - arn:aws:iam::aws:policy/AmazonS3FullAccess
                - arn:aws:iam::aws:policy/AmazonEC2FullAccess
                - arn:aws:iam::aws:policy/CloudWatchLogsFullAccess
                - arn:aws:iam::aws:policy/AWSGlueConsoleFullAccess
                - arn:aws:iam::aws:policy/AmazonAthenaFullAccess
                - arn:aws:iam::aws:policy/service-role/AWSLambdaRole
Outputs:
  EndpointAddress:
    Description: Endpoint Address for Redshift Cluster
    Value: !GetAtt RedshiftCluster.Endpoint.Address
  Port:
    Description: DBName attribute of Redshift DB
    Value: !GetAtt RedshiftCluster.Endpoint.Port
